# crypto-quant-agents

./: .gitignore  CLAUDE.md  PROGRESS_REPORT.md  PROJECT_OVERVIEW.md  README.md  conftest.py  main.py  pyproject.toml
cli/: main.py  models.py  utils.py
data/v3_cpcv/: v3_cpcv_summary.md
data/v5_sltp_sweep/: results.csv  summary.json  top20.md
deploy/: Caddyfile  ROLLBACK.md  deploy.sh  preflight.sh  provision_hetzner.sh
deploy/secrets/: .env.hybrid.example
deploy/systemd/: ta-cycle.service  ta-cycle.timer  ta-hybrid-cycle.service  ta-hybrid-cycle.timer  ta-monitor.service  ta-rebacktest.service  ta-rebacktest.timer
resources/: agent_backtest_sources_analysis.md  llm_backtest_analysis.md
scripts/: ablate_hybrid.py  analyze_replay_cache.py  analyze_v4b.py  backfill_alpaca_news.py  backfill_fng.py  backfill_funding_history.py  backfill_gdelt.py  backfill_onchain.py  backfill_unlocks.py  backtest_hybrid.py  backtest_models.py  backtest_system.py  backtest_system_v2.py  baseline_on_window.py  baseline_strategy.py  baseline_strategy_multi.py  baseline_strategy_v2.py  baseline_strategy_v3.py  baseline_v5_mix.py  bootstrap_hybrid.py  bootstrap_sharpe.py  build_derivatives_features.py  build_microstructure_features.py  build_perp_spot_basis.py  cpcv_v2.py  evaluate_models.py  evaluate_models_multi.py  evaluate_v3_cpcv.py  fetch_coinglass_history.py  fetch_defillama_extensions.py  fetch_deribit_dvol.py  fit_calibration.py  generate_agent_signals.py  generate_hybrid_signals.py  ingest_hf_bitcoin_news.py  make_report_figures.py  mixed_strategy_eval.py  optimize_portfolio_weights.py  parity_refetch_and_replay.py  plot_pit_comparison.py  (+22 more)
tests/: test_exchange_positions.py  test_symbol_map.py
tests/dataflows/: test_coingecko_cache_incremental.py  test_crypto_sentiment_pit.py  test_data_root_env.py  test_fng_store.py  test_onchain_features.py  test_onchain_store.py  (+2 more)
tradingagents/: default_config.py
(+238 files in other folders)
