[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.1.0"
description = "crypto-quant-agents: multi-agent LLM + quant-hybrid cryptocurrency trading system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    # Crypto-specific dependencies
    "pycoingecko>=3.2.0",
    "web3>=6.0.0",
    "GoogleNews>=1.6.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "streamlit>=1.37.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "lightgbm>=4.0.0",
    "python-binance>=1.0.19",
    # Live monitoring UI
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[project.optional-dependencies]
v3 = [
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "online: requires external API access; opt-in via RUN_ONLINE_TESTS=1",
    "slow: marks tests that take >5s (deselect with -m \"not slow\")",
]
